--- a/public/css/tasks.less
+++ b/public/css/tasks.less
@@ -9,6 +9,13 @@
   // background-color: red;
 }
 
+#task_form{
+  display: block;
+}
+#comment_form{
+  display: none;
+}
+
 .card{
   .card-body{
     .tasks_box{
@@ -17,6 +24,18 @@
       overflow-y: scroll;
       overflow-x: hidden;
       margin-bottom: 20px;
+      .more_task_box{
+        justify-content: center;
+        .more_task{
+          display: inline-block;
+          float: none;
+          margin: auto;
+          color: blue;
+          a{
+            color: inherit;
+          }
+        }
+      }
       .tasks_list{
         li{
           .task_box{
@@ -26,6 +45,9 @@
             margin-bottom: 10px;
             .task_name{
               justify-content: space-between;
+              .check_btn{
+                cursor: pointer;
+              }
               .name_and_new{
                 h5{
                   max-width: 371px;
@@ -180,3 +202,9 @@
     }
   }
 }
+
+.tasks_box::-webkit-scrollbar { width: 10px;}
+//.chat_box::-webkit-scrollbar-button {  background-color: #666; }
+.tasks_box::-webkit-scrollbar-track {  background-color: white;}
+// ::-webkit-scrollbar-track-piece { background-color: #ffffff;}
+.tasks_box::-webkit-scrollbar-thumb { height: 50px; background-color: @superb_gray; border-radius: 5px;}
