--- a/public/css/style.less
+++ b/public/css/style.less
@@ -116,12 +116,17 @@ header{
 
     .user_name{
       padding-top: 20px;
-      h5{
-        transition: 0.5s;
-      }
-      h5:hover{
-        color: @superb_gray;
-        transition: 0.5s;
+      a{
+        .user_name_box{
+          display: inline-block;
+          h5{
+            transition: 0.5s;
+          }
+          h5:hover{
+            color: @superb_gray;
+            transition: 0.5s;
+          }
+        }
       }
     }
 
