--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -83,12 +83,23 @@
   font-weight: 700;
   margin-right: 10px;
 }
-.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_time {
+.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_name:hover {
+  text-decoration: underline;
+}
+.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_time .message_short_time {
   cursor: pointer;
   color: #989a99;
 }
-.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .bottom_line:hover {
+.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_time .bottom_line:hover {
   text-decoration: underline;
+}
+.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_time .message_full_time {
+  margin-left: 10px;
+  display: none;
+  color: #989a99;
+}
+.chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_name_time .message_time:hover .message_full_time {
+  display: block;
 }
 .chat_box .messages_box .message_list li .message_box .message_not_img .message_info .message_cont {
   word-wrap: break-word;
@@ -100,6 +111,9 @@
   max-width: 400px;
   display: block;
   flex-wrap: wrap;
+}
+.chat_box .messages_box .message_list li .message_box .images_box .images_list li {
+  width: 100%;
 }
 .chat_box .messages_box .message_list li .message_box .images_box .images_list li .image_box {
   max-width: 150px;
@@ -115,16 +129,19 @@
   max-height: 100px;
 }
 .chat_box .messages_box .message_list li .message_box .images_box .images_list li .file_box {
-  min-width: 400px;
+  width: 100%;
+}
+.chat_box .messages_box .message_list li .message_box .images_box .images_list li .file_box a {
+  display: inline-block;
+  width: 95%;
+  margin-bottom: 10px;
 }
 .chat_box .messages_box .message_list li .message_box .images_box .images_list li .file_box a .file_content {
+  word-wrap: break-word;
+  width: 100%;
   display: inline-block;
   background-color: #e4e7e5;
   border-radius: 10px;
-  margin-bottom: 10px;
-  overflow-x: hidden;
-  margin-right: 5px;
-  margin-bottom: 5px;
   padding: 5px 5px 5px 5px;
   min-width: 200px;
 }
@@ -160,17 +177,6 @@
   height: 50px;
   background-color: #989a99;
   border-radius: 5px;
-}
-#hint {
-  display: none;
-  position: absolute;
-  width: 130px;
-  margin-left: -320px;
-  margin-top: -170px;
-  border-radius: 5px;
-  color: #989a99;
-  background-color: #fff;
-  z-index: 100500;
 }
 .floating-div .picker_comp {
   min-width: 100%;
@@ -210,4 +216,40 @@
   text-align: center;
   margin-bottom: 10px;
   padding: 0 0 0 0;
+  word-wrap: break-word;
+}
+@media screen and (max-width: 500px) {
+  .chat_box {
+    border-radius: 10px;
+  }
+  .chat_box .messages_box {
+    max-width: 95%;
+    min-width: 95%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .chat_box .messages_box .message_list li .message_box .message_not_img .message_info {
+    max-width: 75%;
+  }
+}
+@media screen and (max-width: 370px) {
+  .send_box {
+    margin-top: 7px;
+  }
+  .send_box .button_box {
+    font-size: 20px;
+    margin-top: 4px;
+  }
+  .send_box .input_box {
+    max-width: 90%;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 335px) {
+  .chat_name_box .chat_name a h5 {
+    font-size: 99%;
+  }
+  .chat_box .messages_box .message_list li .message_box .images_box .images_list li .file_box a .file_content {
+    min-width: 100px;
+  }
 }
