--- a/public/css/myAccount.less
+++ b/public/css/myAccount.less
@@ -19,13 +19,18 @@
       border-radius: 30px;
       margin-bottom: 20px;
       .li_box{
-        h5{
-          margin: auto;
-          transition: 0.5s;
-        }
-        h5:hover{
-          color: @superb_gray;
-          transition: 0.5s;
+        a{
+          .user_name_box{
+            display: inline-block;
+            margin-top: 3px;
+            h5{
+              transition: 0.5s;
+            }
+            h5:hover{
+              color: @superb_gray;
+              transition: 0.5s;
+            }
+          }
         }
       }
     }
