--- a/public/css/tasks.less
+++ b/public/css/tasks.less
@@ -49,8 +49,9 @@
                 cursor: pointer;
               }
               .name_and_new{
+                width: 90%;
                 h5{
-                  max-width: 371px;
+                  max-width: 70%;
                   flex-wrap: wrap;
                 }
                 .new_task{
@@ -98,10 +99,12 @@
             .task_files_box{
               display: none;
               .files_list{
-                max-width: 471px;
+                // max-width: 90%;
+
                 display: block;
                 flex-wrap: wrap;
                 li{
+                  width: 100%;
                   .image_box{
                     max-width: 200px;
                     max-height: 100px;
@@ -119,7 +122,8 @@
                     }
                   }
                   .file_box{
-                    min-width: 400px;
+                    min-width: 100%;
+                    max-width: 100%;
                     .file_content{
                       display: inline-block;
                       background-color: @gray;
@@ -127,7 +131,8 @@
                       overflow-x:hidden;
                       margin-right: 5px;
                       padding: 5px 5px 5px 5px;
-                      min-width: 200px;
+                      // min-width: inherit;
+                      max-width: inherit;
                       a{
                         display: block;
                         height: 100%;
@@ -190,6 +195,7 @@
       .input_time_box{
         margin-bottom: 5px;
         justify-content: space-between;
+        display: flex;
         .input_time_text{
           display: inline-block;
           height: 22px;
@@ -208,3 +214,103 @@
 .tasks_box::-webkit-scrollbar-track {  background-color: white;}
 // ::-webkit-scrollbar-track-piece { background-color: #ffffff;}
 .tasks_box::-webkit-scrollbar-thumb { height: 50px; background-color: @superb_gray; border-radius: 5px;}
+
+@media screen and (max-width: 460px){
+  .card{
+    .card-body{
+      .tasks_box{
+        .tasks_list{
+          li{
+            .task_box{
+              .task_name{
+                flex-direction: column;
+                // text-align: justify;
+                // justify-content: flex-start;
+                // display: block;
+                .check_btn{
+                  // width: 100%;
+                  // float: left;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px){
+  .card{
+    .card-body{
+      .tasks_box{
+        .tasks_list{
+          li{
+            .task_box{
+              .task_name{
+                .name_and_new{
+                  flex-direction: column;
+                  width: 100%;
+                  max-width: 100%;
+                  display: block;
+                  .new_task{
+                    width: 35px;
+                    margin-left: 0px;
+                  }
+                  h5{
+                    width: 100%;
+                    max-width: 100%;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .task_form{
+        .input_time_box{
+          flex-direction: column;
+          margin-top: 0px;
+          .input_time_text{
+            margin-top: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 370px){
+  .card{
+    .card-body{
+      .tasks_box{
+        margin-bottom: 5px;
+      }
+      .task_form{
+        .input_file_box{
+          // width: 70%;
+          input{
+            // width: 100%;
+            font-size: 13px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 340px){
+  .card{
+    .card-body{
+      .tasks_box{
+        .tasks_list{
+          li{
+            .task_box{
+              padding: 3px 3px 3px 3px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
