--- a/public/css/accountPage.less
+++ b/public/css/accountPage.less
@@ -43,6 +43,12 @@
                     // display: inline-block;
                     margin-top: 22px;
                     // transition: 0.5s;
+                    a:hover{
+                      text-decoration: underline;
+                      height: 50%;
+                      // display: inline-block;
+                      margin-top: 22px;
+                    }
                   }
                 }
               }
