--- a/public/css/style.less
+++ b/public/css/style.less
@@ -101,6 +101,37 @@ header{
 
 .content_self{
   margin-top: 40px;
+  .text_author{
+    .lable_author{
+      h4{
+        .tutorib_line{
+          text-decoration: underline;
+        }
+      }
+    }
+    .content_author{
+      h5{
+        .tutorib_line{
+          text-decoration: underline;
+        }
+      }
+      div{
+        .tutorib_line{
+          text-decoration: underline;
+        }
+        .tutorib_bold{
+          font-family: 'Fredoka One', cursive;
+        }
+      }
+      .list_basic_models{
+        li{
+          list-style-type:disc;
+          display: list-item;
+          margin-left: 70px;
+        }
+      }
+    }
+  }
   .user_info{
     justify-content: center;
     background-color: @gray;
@@ -153,12 +184,6 @@ header{
     width: 250px;
     height: 250px;
     background-image: url(/images/author_avatar.jpg);
-
-    .text_author{
-      .content_author{
-
-      }
-    }
   }
 
   .icons{
