--- a/public/css/style.less
+++ b/public/css/style.less
@@ -384,7 +384,17 @@ header{
   }
 }
 
-
+.powered_wrap{
+  text-align: center;
+  margin-bottom: 50px;
+  .powered_box{
+    display: inline-block;
+    div{
+      margin-bottom: 15px;
+      color: @superb_gray;
+    }
+  }
+}
 //Media orders
 
 @media screen and (max-width: 1200px){
